SERVER-33494 Remove size storer entry upon ident drop

(cherry picked from commit b4e5daaeb51920b0074661c87dc3b3765431e04e)