src/mongo/db/storage/durable_catalog_impl.h
@@ -102,8 +102,6 @@ public:
 
     bool isResumableIndexBuildIdent(StringData ident) const;
 
-    bool isCollectionIdent(StringData ident) const;
-
     RecordStore* getRecordStore() {
         return _rs;
     }
