src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp
@@ -1888,6 +1888,10 @@ Status WiredTigerKVEngine::dropIdent(RecoveryUnit* ru,
                 str::stream() << "Failed to remove drop-pending ident " << ident};
     }
 
+    if (DurableCatalog::isCollectionIdent(ident)) {
+        _sizeStorer->remove(uri);
+    }
+
     if (onDrop) {
         onDrop();
     }
